TextDecoder: previous failure should not stick around

When the {fatal:true} option is used, the decode() calls throw rather
than generating U+FFFD on bad data. Subsequent decode() calls should
work as the codec state should be flushed (unless {stream:true} was
specified).

Blink was not flushing the codec state, so subsequent calls would
throw. Fix by flushing the codec state (instantiating a new codec),
and align the implementation's code flow/state more closely with the
spec. Also added a new WPT test case, based on the bug report.

Bug: 910292
Change-Id: Ia47b902b69a4b469341e272ed42bb6b05248c1d8
Reviewed-on: https://chromium-review.googlesource.com/c/1376656
Reviewed-by: Adam Rice <ricea@chromium.org>
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617215}